<resources>
    <string name="app_name">TaxiMonterrico</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_burreaactvity">burreaactvity</string>
    <string name="title_home">Casa</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_pagos">Pagos</string>
    <string name="title_produccion">Produccion</string>
    <string name="title_activity_main">Esperando Estado...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_separacion_servicios">Map</string>




    //login strings
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="begin">Iniciar sesión con:</string>
    <string name="invited">Continuar como invitado</string>
    <string name="create_account">Crear una cuenta nueva</string>

    //Costos strings
    <string name="tipo_pago">Tipo de pago</string>
    <string name="vale">N° Vale</string>
    <string name="peaje">Peaje</string>
    <string name="parqueo">Parqueo</string>
    <string name="tiempo_espera">Tiempo de espera(min.)</string>
    <string name="tiempo_espera_costo">Tiempo de espera(costo)</string>
    <string name="tarifa">Tarifa</string>
    <string name="rutas">N° ruta</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <!-- NOTIFICACIONES -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
</resources>
