<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside" />

       <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher" />


                <LinearLayout
                    android:id="@+id/container_user"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_mail"/>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/White"
                        android:layout_gravity="center_horizontal">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textColor="@color/White"
                            android:textColorHint="@color/White"
                            android:hint="@string/email"
                            android:textColorLink="@color/White"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/container_pass"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/White"
                            android:layout_gravity="center_horizontal">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:textColor="@color/White"
                                android:hint="@string/password"
                                android:textColorHint="@color/White"
                                android:imeOptions="actionDone" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageView
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>



                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:textColor="@color/White"
                    android:textAllCaps="true"
                    android:background="@drawable/button_square_border"
                    android:text="Ingresar" />



                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/et_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/White"
                        android:text="@string/forgot_password"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_forgot_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/colorlogin"
                        android:gravity="center_horizontal"
                        android:text="Regístrate"
                        android:textStyle="bold"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</RelativeLayout>